test: refactor test code